# owokuro

./: LICENSE  README.md  pyproject.toml
owokuro/: __init__.py  __main__.py  converter.py  owosocket.py  run.py
tests/: test_cli.py  test_converter.py  test_main.py  test_owosocket.py
