[project]
name = "owokuro"
version = "0.1.2"
description = "Generate mokuro files using owocr"
readme = "README.md"
authors = [
    { name = "kamperemu" }
]
requires-python = ">=3.13"
dependencies = [
    "natsort>=8.4.0",
    "websocket-client",
]

[project.scripts]
owokuro = "owokuro.__main__:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
